fix| truncate card header text

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -103,7 +103,7 @@ $box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
 }
-.content_list_loader{
+.content_list_loader {
   width: 100%;
   height: 100%;
   display: grid;
@@ -134,6 +134,9 @@ $box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
     border-bottom: 1px solid transparent;
     a {
       color: $color-text-primary;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
       &:hover {
         color: $color-text-secondary;
         cursor: pointer;
